# kodit

./: .air.toml  .dockerignore  .gitignore  CLAUDE.md  DESCRIPTION.md  Dockerfile  INDEXING_QUEUE_REFACTOR_PLAN.md  MIGRATION.md  Makefile  Notes.md  PLAN.md  QUESTIONS.md  README.md  TODO.md  alembic.ini  api_documentation_design.md  api_documentation_mcp_design.md  docker-compose.dev.yaml  docker-entrypoint.sh  go.mod  go.sum  handlers.go  handlers_test.go  hello.py  index.yaml  indexing_queue_refactor_plan.md  kodit-0.1.0.tgz  kodit-0.1.1.tgz  kodit-0.1.2.tgz  kodit-1.0.0.tgz  kodit.go  kodit_integration_test.go  kodit_test.go  mcp_server.go  mcp_server_test.go  migration-loop.sh  options.go  physical_architecture_discovery_design.md  plan.md  progress_reporting_design.md  (+11 more)
.claude/: settings.json
.github/: CONTRIBUTING.md
.helix/: startup.sh
docs/: _index.md  docs.go  swagger.json  swagger.yaml
extracted_methods/: get_pwd.py  main.py
go-target/: .env  CLAUDE.md  (+17 more)
test/benchmark/: .gitignore  docker-compose.benchmark.yaml  openrouter__anthropic__claude-haiku-4.5.mini_swe_agent_baseline.json  openrouter__anthropic__claude-haiku-4.5.mini_swe_agent_kodit.json  openrouter__anthropic__claude-haiku-4.5.mini_swe_agent_kodit_simple.json  pyproject.toml
test/benchmark/src/benchmark/: cli.py  log.py  runner.py  server.py
test/benchmark/src/benchmark/minisweagent/: kodit_mcp_cli.py  retrieval.py  runner.py
test/benchmark/src/benchmark/minisweagent/configs/: kodit.yaml
test/benchmark/src/benchmark/swebench/: generator.py  instance.py  repository.py  retriever.py
(+1356 files in other folders)
