[project]
name = "kodit-benchmark"
version = "0.1.0"
description = "Benchmark suite for evaluating Kodit's code retrieval capabilities"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "datasets>=2.14",
    "httpx>=0.25",
    "litellm>=1.0",
    "mini-swe-agent>=0.1",
    "structlog>=23.1",
    "swebench>=2.0",
]

[project.scripts]
kodit-benchmark = "benchmark.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "PLR", "S", "BLE"]
ignore = ["S603", "S607", "S105"]
